--- a/Blog.html
+++ b/Blog.html
@@ -17,11 +17,8 @@
         <div class="nav">
             <a class="navItem" href="./index.html">Home</a>
             <a class="navItem" href="./shop.html">Shop</a>
-            <a class="navItem" href="#">New Page</a>
             <a class="navItem Blog" href="./Blog.html">Blog</a>
-            <a class="navItem" href="./Garments.html">Garments</a>
             <a class="navItem" href="./repository.html">Log In</a>
-            <a class="navItem" href="#">New Page</a>
             <a class="contact" href="./contact.html">Contact Us</a>
         </div>
     </header>
@@ -31,9 +28,8 @@
     
 <!-------------------------------------------- Top Picture -------------------------------------------->
     <div class="topPicContainer">
-        <h1 class="blog-Name">Fair-Game</h1>
-        <p class="blog-">Educating you Fairly</p>
-        <img class="blog-topPic" src="./Images/blogBackground.jpg" alt="">
+        <h1 class="blog-Name">Explore Something New</h1>
+        <img class="blog-topPic" src="./Images/clothingStore.jpg" alt="">
     </div>
     
 <!-------------------------------------------- Blog filter -------------------------------------------->
