--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
 
 <!------------------------------------------------------------------------------------------------- Footer  ------------------------------------------------------------------------------------------------->
 <footer>
-    <br>
-    <br>
-    <br>
+    <p>&copy; 2024 Fair Games. All rights reserved.</p>
 </footer>
 
 
