--- a/Fair-Game_Offical-main/Blog.html
+++ b/Fair-Game_Offical-main/Blog.html
@@ -36,7 +36,7 @@
                 <div class="blog-header">
                     <p class="blog-headerName">fairgamesm <img class="crown-Img" src="./Social-Icons/crown.png" alt=""></p>
                     <a href="" class="dropDown-link"><img class="dropDown-icon" src="./Social-Icons/tripleDot.png" alt=""></a>
-                <a href="" class="blog-textLink">
+                <a href="./BlogPosts/unleashCreativity.html" class="blog-textLink">
                     <p class="blog-text">Unleashing Creativity: Our Team's Dive into Art and Screen Printing</p>
                 </a>
                 </div>
@@ -49,7 +49,7 @@
                 <div class="blog-header">
                     <p class="blog-headerName">fairgamesm <img class="crown-Img" src="./Social-Icons/crown.png" alt=""></p>
                     <a href="" class="dropDown-link"><img class="dropDown-icon" src="./Social-Icons/tripleDot.png" alt=""></a>
-                <a href="" class="blog-textLink">
+                <a href="./BlogPosts/sunsetSummit.html" class="blog-textLink">
                     <p class="blog-text">Sunset Summit: Screen Prints and Close Calls in Arizona</p>
                 </a>
                 </div>
@@ -62,7 +62,7 @@
                 <div class="blog-header">
                     <p class="blog-headerName">fairgamesm <img class="crown-Img" src="./Social-Icons/crown.png" alt=""></p>
                     <a href="" class="dropDown-link"><img class="dropDown-icon" src="./Social-Icons/tripleDot.png" alt=""></a>
-                <a href="" class="blog-textLink">
+                <a href="./BlogPosts/llamaRama.html" class="blog-textLink">
                     <p class="blog-text">Llama-Rama: Tales from the Alpaca Party</p>
                 </a>
                 </div>
@@ -74,7 +74,7 @@
                 <div class="blog-header">
                     <p class="blog-headerName">fairgamesm <img class="crown-Img" src="./Social-Icons/crown.png" alt=""></p>
                     <a href="" class="dropDown-link"><img class="dropDown-icon" src="./Social-Icons/tripleDot.png" alt=""></a>
-                <a href="" class="blog-textLink">
+                <a href="./BlogPosts/beepBeep.html" class="blog-textLink">
                     <p class="blog-text">Beep Beep! The Fast and the Feathered</p>
                 </a>
                 </div>
