--- a/Fair-Game_Offical-main/login.html
+++ b/Fair-Game_Offical-main/login.html
@@ -36,6 +36,14 @@
         <p id="errorMessage" class="error-message"></p>
     </div>
 
+
+
+
     <script src="./javaScript/login.js"></script>
 </body>
+ 
+<footer>
+    <p>&copy; 2024 Fair Games. All rights reserved.</p>
+</footer>
+
 </html>
