--- a/Fair-Game_Offical-main/login.html
+++ b/Fair-Game_Offical-main/login.html
@@ -35,6 +35,9 @@
         </form>
         <p id="errorMessage" class="error-message"></p>
     </div>
+    <div class="create-account-section">
+    <p>Need to Create an Account? <a href="./Create_Account.html" class="create-account-btn">Create Account</a></p>
+</div>
 
     <script src="./javaScript/login.js"></script>
 </body>
