--- a/Fair-Game_Offical-main/login.html
+++ b/Fair-Game_Offical-main/login.html
@@ -33,8 +33,7 @@
             <input id="password" type="password" name="password" placeholder="Password" required>
             <input type="submit" value="Submit">
         </form>
-        <p>Need to Create an Account? <a href="Fair-Game_Offical/Fair-Game_Offical-main
-/Create_Account.html" class="create-account-btn">Create Account</a></p>
+        <p>Need to Create an Account? <a href="/Create_Account.html" class="create-account-btn">Create Account</a></p>
         <p id="errorMessage" class="error-message"></p>
     </div>
    
