--- a/Fair-Game_Offical-main/login.html
+++ b/Fair-Game_Offical-main/login.html
@@ -33,7 +33,7 @@
             <input id="password" type="password" name="password" placeholder="Password" required>
             <input type="submit" value="Submit">
         </form>
-        <a href="create-account.html" class="create-account-btn">Create Account</a>
+        <a href="./Create-Account.html" class="create-account-btn">Create Account</a>
 
         <p id="errorMessage" class="error-message"></p>
     </div>
